# agent-local

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  budgets.yaml  conftest.py  docker-compose.yml  pyproject.toml  quickstart.sh  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  loop.py  main.py  policy.py  retrieval.py  router.py  schemas.py  tiers.py  tools.py
bench/: RESULTS.md  bench.sh
core/: __init__.py  agent.py  circuit.py  config.py  controller.py  policy.py  retrieval.py  router.py  schemas.py  telemetry.py  tiers.py  tools.py
docs/: usecases.md
docs/audit/: CLAUDE_CODE_IMPROVEMENT_PLAN.md  RESILIENCE_CONTRACT_HARDENING.md
docs/decisions/: ADR-001-reusable-platform-not-template.md  ADR-002-calibrated-infrastructure.md  ADR-003-policy-as-versioned-data.md  ADR-004-cross-tier-verification.md  ADR-005-decision-telemetry.md  ADR-006-tool-capability-contract.md  ADR-007-structured-tool-calling.md  ADR-008-retrieval-caller-isolation.md  ADR-009-reflection-notes-channel.md  README.md
evals/: run.py
evals/reports/: 20260615_181546_01_intent.json  20260615_182008_01_intent.json  20260615_195803_01_intent.json  (+2 more)
prompts/: router.md
releases/: v0.6.0.md
scripts/: check_coherence.py
tests/: conftest.py  test_app_serving_contract.py  test_circuit.py  test_controller.py  test_eval_sets.py  test_policy.py  test_retrieval.py  test_schemas.py  test_telemetry.py  test_tiers.py  test_tools.py  test_verifier.py
(+23 files in other folders)
